--- a/package.json
+++ b/package.json
@@ -25,11 +25,7 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.9.2",
-    "@docusaurus/types": "3.9.2",
-    "@tailwindcss/postcss": "^4.1.17",
-    "@tailwindcss/typography": "^0.5.19",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17"
+    "@docusaurus/types": "3.9.2"
   },
   "browserslist": {
     "production": [
